# ai-economy-timelines

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
app/: charts.py  data_loader.py  formatting.py  launcher.py  streamlit_app.py
app/pages/: 1_Model_Overview.py  2_Scenario_Matrix.py  3_Supply_Capacity.py  4_Allocation_Layer.py  5_Largest_Frontier_Run.py  6_Effective_Compute_Handoff.py  7_Assumptions.py  8_Source_Provenance.py  9_Run_Manifest.py
data/assumptions/: allocation_input_assumptions.yaml  phase2_input_assumptions.csv  phase2_input_assumptions.yaml
data/processed/: frontier_models_historical.parquet  historical_models.csv  phase2_fundamental_inputs.csv
docs/: allocation_findings.md  allocation_initial_notes.md  component_contracts.md  data_dictionary.md  executive_summary.md  glossary.md  historical_findings.md  historical_initial_notes.md  index.md  input_provenance.md  model_map.md  model_state.md  model_walkthrough.md  output_guide.md  phase1_findings.md  phase1_initial_notes.md  phase1_scope.md  phase2_findings.md  phase2_initial_notes.md  phase2_scope.md  review_workbook_guide.md  scope.md  streamlit_demo_guide.md  supply_findings.md  supply_initial_notes.md
docs/assets/: _generate_architecture.py
model/: allocation_engine.py  charts.py  data_cleaning.py  frontier_filters.py  fundamental_inputs.py  review_database.py  runtime.py  supply_engine.py  trend_fitting.py  workbook_export.py
notebooks/: run_phase1.py  run_phase2_sprint1.py  run_phase2_sprint2.py  run_sprint1.py
pipelines/: allocation.py  allocation_charts.py  build_review_database.py  export_workbook.py  historical.py  phase1.py  phase2.py  phase2_charts.py  supply.py  supply_charts.py  validate_repo_outputs.py
scenarios/: allocation_base.yaml  allocation_inference_heavy.yaml  allocation_rnd_acceleration.yaml  allocation_training_race.yaml  phase2_base_input_case.yaml  phase2_chip_bottleneck.yaml  supply_capex_rich.yaml  supply_power_datacenter_bottleneck.yaml
tests/: conftest.py  test_allocation_engine.py  test_assumptions_loader.py  test_frontier_filters.py  test_fundamental_inputs.py  test_output_inventory.py  test_runtime.py  test_supply_engine.py  test_trend_fitting.py
(+21 files in other folders)
