[project]
name = "ai-economy-timelines"
version = "0.1.0"
description = "Phase 1+2: historical compute baseline and forward compute-capacity model"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "pyarrow>=24.0.0",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "statsmodels>=0.14.6",
    "streamlit>=1.57.0",
]

[project.scripts]
historical = "pipelines.historical:main"
supply = "pipelines.supply:main"
allocation = "pipelines.allocation:main"
database = "pipelines.build_review_database:main"
workbook = "pipelines.export_workbook:main"
validate-outputs = "pipelines.validate_repo_outputs:main"
demo = "app.launcher:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["model", "pipelines", "app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
